<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/night"
    tools:context=".ui.MainActivity"
    android:orientation="vertical">


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:layout_gravity="center"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:textSize="@dimen/result_size"
            tools:text="123456789"
            android:textColor="#FFAA00"
            android:paddingVertical="@dimen/defoult_padding"
            android:gravity="end" />

        <Button
            android:id="@+id/key_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_1"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_2"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_3"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_plus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_plus" />

        <Button
            android:id="@+id/key_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_4"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_5"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_6"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_minus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_minus" />

        <Button
            android:id="@+id/key_7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_7"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_8"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_9"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_mul" />

        <Button
            android:id="@+id/key_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_dot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_dot"
            android:background="@drawable/oval_button" />

        <Button
            android:id="@+id/key_div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/key_div" />



    </GridLayout>


</LinearLayout>